 + New gameplay mode "Construction Mode"
 + New gameplay mode "TechRacer"
 + New training/multiplayer mission: "Climb Home"
 + Game scheme screen has a "Script parameter" field now. This allows to make more customizable scripts/modes.
 + Network game rejoining. Note: Your team(s) will vanish after 3 turns.
 + Visual and gameplay changes to "sea" - world edges.
 + New engine command: /togglechat will disable/enable chat display (does not affect chat history display)
 + Change to Racer: first weapon/utility available will be automatically selected on start
 + Added some visual feedback to failed girder placement.
 + Various performance tweaks, especially for very large maps.
 + Allow switching through hogs in reverse order with PRECISE+HOGSWITCH (left shift + tab, by default)
 + Added support for custom Sudden Death music to theme.cfg (e.g. sd-music=hell.ogg ).
 + New Hats: policegirl, fr_tomato, cratehider
 * Fixed drill rockets sometimes exploding on impact.
 * Fixed trainings broken due to indestructable targets/crates.
 * Fixes and tweaks for low qualily rendering.
 * Sinegun won't shoot through -solid- land anymore
 * Many bug fixes and tweaks.

Frontend / Netgame:
 + High resolution previews!
 + Preview for dynamic maps generated by game style scripts (e.g. "ShoppaMap))!
 + Moved room status filter to top left of rooms list.

Lua API:
 + More helpful syntax error messages.
 + New hooks: onParameters(), onPreviewInit().
 + New functions:
      Dismissteam(teamname)
      GetGameFlag(gameflag) -- returns true/false
      PlaceSprite(x, y, sprite, frameIdx [, landFlag, ... ]) -- sprite refers to an id from the TSprite list
      SetWaterLine(waterline) -- moves water level to the specified y. the current value is in read-only global waterline
      SetNextWeapon() -- make current hedgehog switch to next weapon. e.g. use in trainings to preselect weapon
      SetWeapon(ammoType) -- decide which weapon the current hedgehog should equip
 + Map Drawing: